@@ -502,6 +502,9 @@ Tools
 Documentation
 -------------
 
+- Patch #1671450: add a section about subclassing builtin types to the
+  "extending and embedding" tutorial.
+
 - Bug #1629125: fix wrong data type (int -> Py_ssize_t) in PyDict_Next
   docs.
 
